deploy/kind-coding/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wardby-coding
  labels:
    app.kubernetes.io/part-of: wardby
